--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,9 @@
 body {
   font-family: 'Roboto', Helvetica, sans-serif;
-  background-color: grey;
+  background-color: rgb(167, 167, 167);
   margin: 0;
   padding: 0;
+  font-size: 1.25rem;
 }
 
 h1,
@@ -12,6 +13,14 @@ h4,
 h5,
 h6 {
   font-family: 'Stick No Bills', 'Roboto', Helvetica, sans-serif;
+}
+
+h1 {
+  font-size: 3rem;
+}
+
+h2 {
+  font-size: 2.5rem;
 }
 
 .container {
@@ -24,24 +33,28 @@ img {
   width: 100%;
 }
 
-.main-nav ul {
+nav ul {
   list-style: none;
   display: flex;
   flex-wrap: wrap;
-  margin: 0;
+  margin: 1rem;
   padding: 0;
 }
 
-.main-nav ul li {
+nav ul li {
   flex: 1;
   text-align: center;
 }
 
-.main-nav ul li a {
+nav ul li a {
   display: block;
   color: inherit;
   text-decoration: none;
-  font-size: 1.25rem;
+  font-size: 1.75rem;
+}
+
+nav ul li a:hover{
+  text-decoration: underline;
 }
 
 form input,
@@ -60,12 +73,24 @@ form textarea {
 }
 
 form button {
-  background: none;
+  background: rgb(143, 96, 75);
   border: 2px solid black;
-  padding: 1rem;
+  padding: 1rem 2rem;
   text-transform: uppercase;
+  font-size: 1rem;
+  font-weight: bold;
 }
 
-.site-footer {
+footer {
   padding: 2rem 0;
+}
+
+.back {
+  color: rgb(196, 73, 16);
+  text-decoration: none;
+}
+
+.skip-links {
+  color: rgb(196, 73, 16);
+  text-decoration: none;
 }
